@@ -28,7 +28,10 @@
 
 #include "CodeProfile.h"
 #include "MetaAllocator.h"
-#include "signal.h"
+
+#if HAVE(SIGNAL_H)
+#include <signal.h>
+#endif
 
 namespace JSC {
 
@@ -78,6 +81,7 @@ void CodeProfiling::sample(void* pc, void** framePointer)
 
 void CodeProfiling::notifyAllocator(WTF::MetaAllocator* allocator)
 {
+#if !OS(WINCE)
     // Check for JSC_CODE_PROFILING.
     const char* codeProfilingMode = getenv("JSC_CODE_PROFILING");
     if (!codeProfilingMode)
@@ -104,6 +108,7 @@ void CodeProfiling::notifyAllocator(WTF::MetaAllocator* allocator)
     ASSERT(!s_tracker);
     s_tracker = new WTF::MetaAllocatorTracker();
     allocator->trackAllocations(s_tracker);
+#endif
 }
 
 void* CodeProfiling::getOwnerUIDForPC(void* address)
